# flockmind

./: Cargo.toml  README.md  flockmind.example.toml
src/: api.rs  attachments.rs  config.rs  daemon.rs  lib.rs  main.rs  raft_api.rs  types.rs
src/auth/: certs.rs  enrollment.rs  mod.rs
src/brain/: llm_client.rs  mod.rs  planner.rs  tracker.rs
src/executor/: mod.rs  runner.rs  validator.rs
src/replicator/: mod.rs  network.rs  raft_node.rs  state_machine.rs  storage.rs
tests/: attachments_test.rs  certs_test.rs  enrollment_test.rs  state_machine_test.rs  tracker_test.rs  types_test.rs  validator_test.rs
