[package]
name = "flockmind"
version = "0.1.0"
edition = "2021"
description = "Distributed hive daemon with LLM brain"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Raft consensus
openraft = { version = "0.9", features = ["serde"] }

# Storage
sled = "0.34"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rcgen = "0.13"
webpki-roots = "0.26"

# HTTP client for LLM
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# OpenAI client
async-openai = "0.25"

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"

# Utils
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
bytemuck = { version = "1", features = ["derive"] }

# Config parsing
toml = "0.8"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "flockmind"
path = "src/main.rs"

[[bin]]
name = "flockctl"
path = "src/bin/flockctl.rs"
